--- a/cart.html
+++ b/cart.html
@@ -69,7 +69,7 @@
                 <div class = "mt-4 row gx-0 gy-3 d-flex align-items-stretch"></div>
             </div>
 
-            <h4 class="mt-4">Total: $<span id="cart-total">0.00</span></h4>
+            <h4 class="mt-4 d-none">Total: $<span id="cart-total">0.00</span></h4>
             <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#orderModal">Place Order</button>
         </div>
     </section>
@@ -83,7 +83,7 @@
                 </div>
                 <div class="modal-body">
                     <form id="order-form">
-                        <div class="mb-3"><label class="form-label">Amount</label><input type="text" class="form-control" id="amount" readonly></div>
+                        <div class="mb-3 d-none"><label class="form-label">Amount</label><input type="text" class="form-control" id="amount" readonly></div>
                         <div class="d-flex flex-md-row flex-column gap-2 mb-2">
                             <div><label class="form-label">First Name</label><input type="text" class="form-control" name="firstname" required></div>
                             <div><label class="form-label">Last Name</label><input type="text" class="form-control" name="lastname" required></div>
@@ -136,8 +136,8 @@
             <img src="${item.image}" height="400px" width="320px" style="object-fit: cover" alt="${item.name}" />
             <div class="ms-3 d-flex flex-column align-items-center align-items-md-start mt-2 mt-md-0 h-100">
                 <h4 class="mb-auto text-center text-md-start">${item.name}</h4>
-                <p class="text-center text-md-start">$${item.price.toFixed(2)}</p>
-                <p class="text-center text-md-start">Subtotal: $${item.price * item.quantity}</p>
+                <p class="text-center text-md-start d-none">$${item.price.toFixed(2)}</p>
+                <p class="text-center text-md-start d-none">Subtotal: $${item.price * item.quantity}</p>
                 <input type="number" class="form-control me-2 mb-2" min="1" value="${item.quantity}" onchange="changeQuantity(${index}, this.value)">
                 <button class="btn btn-danger btn-sm" onclick="removeFromCart(${index})">
                     Remove
@@ -223,29 +223,29 @@
                         <li class="list-group-item d-flex align-items-center">
                             <i class="fas fa-map-marked-alt me-4"></i>
                             <div>
-                                <p class="mb-0">House no 517, Crystal Ideal City, Awadhpuri</p>
+                                <p class="mb-0">88-28 146 street, Jamaica, New York, ZIP: 11435</p>
                                 <small>Address</small>
                             </div>
                         </li>
-                        <li class="list-group-item d-flex align-items-center">
+                        <li class="list-group-item d-flex align-items-center" onclick="window.location.href = 'mailto:joydebshil706@gmail.com'">
                             <i class="fas fa-envelope me-4"></i>
                             <div>
-                                <p class="mb-0">jibiteshbora@gmail.com</p>
+                                <p class="mb-0">joydebshil706@gmail.com</p>
                                 <small>Email</small>
                             </div>
                         </li>
-                        <li class="list-group-item d-flex align-items-center">
+                        <li class="list-group-item d-flex align-items-center" onclick="window.location.href = 'tel:3159523037'">
                             <i class="fas fa-phone-alt me-4"></i>
                             <div>
-                                <p class="mb-0">8638280029</p>
-                                <small>Phone</small>
+                                <p class="mb-0">3159523037</p>
+                                <small>Phone (Joydebshil)</small>
                             </div>
                         </li>
-                        <li class="list-group-item d-flex align-items-center">
-                            <i class="fab fa-whatsapp me-4"></i>
+                        <li class="list-group-item d-flex align-items-center" onclick="window.location.href = 'tel:347579642'">
+                            <i class="fab fa-phone-alt me-4"></i>
                             <div>
-                                <p class="mb-0">9387616759</p>
-                                <small>WhatsApp</small>
+                                <p class="mb-0">347579642</p>
+                                <small>Phone (Taposi Kar)</small>
                             </div>
                         </li>
                     </ul>
@@ -318,32 +318,32 @@
                             <i class = "fas fa-map-marked-alt"></i>
                         </span>
                         <span class = "fw-light">
-                            House no 517, Crystal Ideal City, Awadhpuri
+                            88-28 146 street, Jamaica, New York, ZIP: 11435
                         </span>
                     </div>
-                    <div class = "d-flex justify-content-start align-items-start my-2">
+                    <div class = "d-flex justify-content-start align-items-start my-2" onclick="window.location.href = 'mailto:joydebshil706@gmail.com'">
                         <span class = "me-3">
                             <i class = "fas fa-envelope"></i>
                         </span>
                         <span class = "fw-light">
-                            jibiteshbora@gmail.com
+                            joydebshil706@gmail.com
                         </span>
                     </div>
-                    <div class = "d-flex justify-content-start align-items-start my-2">
+                    <div class = "d-flex justify-content-start align-items-start my-2" onclick="window.location.href = 'tel:8638280029'">
                         <span class = "me-3">
                             <i class = "fas fa-phone-alt"></i>
                         </span>
                         <span class = "fw-light">
-                            8638280029
+                            3159523037 (Joydebshil)
                         </span>
                     </div>
 
-                    <div class = "d-flex justify-content-start align-items-start my-2">
+                    <div class = "d-flex justify-content-start align-items-start my-2" onclick="window.location.href = 'tel:9387616759'">
                         <span class = "me-3">
-                            <i class="fab fa-whatsapp"></i>
+                            <i class="fab fa-phone-alt"></i>
                         </span>
                         <span class = "fw-light">
-                            9387616759
+                            347579642 (Taposi Kar)
                         </span>
                     </div>
                 </div>
@@ -379,9 +379,6 @@
         </div>
     </footer>
     <!-- end of footer -->
-
-
-
 
     <!-- jquery -->
     <script src = "js/jquery-3.6.0.js"></script>
