--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     <img src="${product.image}" height="400px" class="card-img-top" style="object-fit: cover" alt="${product.name}">
                     <div class="d-flex flex-column card-body mt-auto">
                         <h5 class="card-title mb-auto text-center">${product.name}</h5>
-                        <p class="card-text mt-2 text-center">$${product.price.toFixed(2)}</p>
+                        <p class="card-text mt-2 text-center d-none">$${product.price.toFixed(2)}</p>
                         <button class="btn btn-success" onclick="addToCart(${product.id}, '${product.name}', '${product.image}', ${product.price})">
                             <i class="bi bi-cart-plus"></i> Add to Cart
                         </button>
@@ -341,29 +341,29 @@
                         <li class="list-group-item d-flex align-items-center">
                             <i class="fas fa-map-marked-alt me-4"></i>
                             <div>
-                                <p class="mb-0">House no 517, Crystal Ideal City, Awadhpuri</p>
+                                <p class="mb-0">88-28 146 street, Jamaica, New York, ZIP: 11435</p>
                                 <small>Address</small>
                             </div>
                         </li>
-                        <li class="list-group-item d-flex align-items-center">
+                        <li class="list-group-item d-flex align-items-center" onclick="window.location.href = 'mailto:joydebshil706@gmail.com'">
                             <i class="fas fa-envelope me-4"></i>
                             <div>
-                                <p class="mb-0">jibiteshbora@gmail.com</p>
+                                <p class="mb-0">joydebshil706@gmail.com</p>
                                 <small>Email</small>
                             </div>
                         </li>
-                        <li class="list-group-item d-flex align-items-center">
+                        <li class="list-group-item d-flex align-items-center" onclick="window.location.href = 'tel:3159523037'">
                             <i class="fas fa-phone-alt me-4"></i>
                             <div>
-                                <p class="mb-0">8638280029</p>
-                                <small>Phone</small>
+                                <p class="mb-0">3159523037</p>
+                                <small>Phone (Joydebshil)</small>
                             </div>
                         </li>
-                        <li class="list-group-item d-flex align-items-center">
-                            <i class="fab fa-whatsapp me-4"></i>
+                        <li class="list-group-item d-flex align-items-center" onclick="window.location.href = 'tel:347579642'">
+                            <i class="fab fa-phone-alt me-4"></i>
                             <div>
-                                <p class="mb-0">9387616759</p>
-                                <small>WhatsApp</small>
+                                <p class="mb-0">347579642</p>
+                                <small>Phone (Taposi Kar)</small>
                             </div>
                         </li>
                     </ul>
@@ -436,32 +436,32 @@
                             <i class = "fas fa-map-marked-alt"></i>
                         </span>
                         <span class = "fw-light">
-                            House no 517, Crystal Ideal City, Awadhpuri
+                            88-28 146 street, Jamaica, New York, ZIP: 11435
                         </span>
                     </div>
-                    <div class = "d-flex justify-content-start align-items-start my-2">
+                    <div class = "d-flex justify-content-start align-items-start my-2" onclick="window.location.href = 'mailto:joydebshil706@gmail.com'">
                         <span class = "me-3">
                             <i class = "fas fa-envelope"></i>
                         </span>
                         <span class = "fw-light">
-                            jibiteshbora@gmail.com
+                            joydebshil706@gmail.com
                         </span>
                     </div>
-                    <div class = "d-flex justify-content-start align-items-start my-2">
+                    <div class = "d-flex justify-content-start align-items-start my-2" onclick="window.location.href = 'tel:8638280029'">
                         <span class = "me-3">
                             <i class = "fas fa-phone-alt"></i>
                         </span>
                         <span class = "fw-light">
-                            8638280029
+                            3159523037 (Joydebshil)
                         </span>
                     </div>
 
-                    <div class = "d-flex justify-content-start align-items-start my-2">
+                    <div class = "d-flex justify-content-start align-items-start my-2" onclick="window.location.href = 'tel:9387616759'">
                         <span class = "me-3">
-                            <i class="fab fa-whatsapp"></i>
+                            <i class="fab fa-phone-alt"></i>
                         </span>
                         <span class = "fw-light">
-                            9387616759
+                            347579642 (Taposi Kar)
                         </span>
                     </div>
                 </div>
@@ -497,9 +497,6 @@
         </div>
     </footer>
     <!-- end of footer -->
-
-
-
 
     <!-- jquery -->
     <script src = "js/jquery-3.6.0.js"></script>
