--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New York Hindu | Cart</title>
+    <title>New York Hindu | About Us</title>
     <!-- fontawesome cdn -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- bootstrap css -->
@@ -62,146 +62,14 @@
     <section class="my-5">
         <div class="container pt-5 mb-3">
             <div class = "title text-center">
-                <h2 class = "position-relative d-inline-block">Cart</h2>
+                <h2 class = "position-relative d-inline-block">About Us</h2>
             </div>
 
-            <div class="row g-0" id="cart-items">
-                <div class = "mt-4 row gx-0 gy-3 d-flex align-items-stretch"></div>
+            <div class="my-5">
+                <img src="images/logo.png" alt="" class="img-fluid my-5">
             </div>
-
-            <h4 class="mt-4 d-none">Total: $<span id="cart-total">0.00</span></h4>
-            <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#orderModal">Place Order</button>
         </div>
     </section>
-
-    <div class="modal fade" id="orderModal" tabindex="-1" aria-labelledby="orderModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-lg">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="orderModalLabel">Place Order</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <form id="order-form">
-                        <div class="mb-3 d-none"><label class="form-label">Amount</label><input type="text" class="form-control" id="amount" readonly></div>
-                        <div class="d-flex flex-md-row flex-column gap-2 mb-2">
-                            <div><label class="form-label">First Name</label><input type="text" class="form-control" name="firstname" required></div>
-                            <div><label class="form-label">Last Name</label><input type="text" class="form-control" name="lastname" required></div>
-                        </div>
-                        <div class="d-flex flex-md-row flex-column gap-2 mb-2">
-                            <div><label class="form-label">Email</label><input type="email" class="form-control" name="email" required></div>
-                            <div><label class="form-label">Phone</label><input type="tel" class="form-control" name="phone" required></div>
-                        </div>
-                        <div class="d-flex flex-md-row flex-column gap-2 mb-2">
-                            <div><label class="form-label">Apartment</label><input type="text" class="form-control" name="apartment"></div>
-                            <div><label class="form-label">Street</label><input type="text" class="form-control" name="street" required></div>
-                        </div>
-                        <div class="d-flex flex-md-row flex-column gap-2 mb-2">
-                            <div><label class="form-label">Locality</label><input type="text" class="form-control" name="locality"></div>
-                            <div><label class="form-label">City</label><input type="text" class="form-control" name="city" required></div>
-                        </div>
-                        <div class="d-flex flex-md-row flex-column gap-2 mb-2">
-                            <div><label class="form-label">ZIP</label><input type="text" class="form-control" name="zip" required></div>
-                            <div><label class="form-label">State</label><input type="text" class="form-control" name="state" required></div>
-                        </div>
-                        <button type="submit" class="btn btn-success w-100 mt-2">Submit Order</button>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <script>
-    function getCart() {
-        return JSON.parse(localStorage.getItem("cart")) || [];
-    }
-
-    function saveCart(cart) {
-        localStorage.setItem("cart", JSON.stringify(cart));
-    }
-
-    function updateCart() {
-        const cart = getCart();
-        const cartItems = document.getElementById("cart-items");
-        const cartTotal = document.getElementById("cart-total");
-        const amountInput = document.getElementById("amount");
-        cartItems.innerHTML = "";
-        let total = 0;
-
-        cart.forEach((item, index) => {
-        const li = document.createElement("li");
-        li.className = "list-group-item d-flex flex-column flex-md-row align-items-center p-2";
-
-        li.innerHTML = `
-            <img src="${item.image}" height="400px" width="320px" style="object-fit: cover" alt="${item.name}" />
-            <div class="ms-3 d-flex flex-column align-items-center align-items-md-start mt-2 mt-md-0 h-100">
-                <h4 class="mb-auto text-center text-md-start">${item.name}</h4>
-                <p class="text-center text-md-start d-none">$${item.price.toFixed(2)}</p>
-                <p class="text-center text-md-start d-none">Subtotal: $${item.price * item.quantity}</p>
-                <input type="number" class="form-control me-2 mb-2" min="1" value="${item.quantity}" onchange="changeQuantity(${index}, this.value)">
-                <button class="btn btn-danger btn-sm" onclick="removeFromCart(${index})">
-                    Remove
-                </button>
-            </div>
-        `;
-
-        cartItems.appendChild(li);
-        total += item.price * item.quantity;
-        });
-
-        cartTotal.textContent = total.toFixed(2);
-        amountInput.value = total.toFixed(2);
-    }
-
-    function changeQuantity(index, quantity) {
-        let cart = getCart();
-        quantity = parseInt(quantity, 10);
-        if (quantity > 0) {
-        cart[index].quantity = quantity;
-        } else {
-        cart.splice(index, 1);
-        }
-        saveCart(cart);
-        updateCart();
-    }
-
-    function removeFromCart(index) {
-        let cart = getCart();
-        cart.splice(index, 1);
-        saveCart(cart);
-        updateCart();
-    }
-
-    document.getElementById("order-form").addEventListener("submit", function (e) {
-        e.preventDefault();
-        const formData = new FormData(this);
-        const cart = getCart();
-        const items = cart.map(item => `${item.id},${item.name},${item.quantity}`).join("; ");
-        formData.append("items", items);
-        formData.append("amount", document.getElementById("amount").value);
-
-        fetch("https://script.google.com/macros/s/AKfycbwsnqkxpZEYTMV6PWfJCK-2Y2E0iS2gCDm2o8YUnuIXaFVDeGwU5s30li6tThGj4wOS/exec", {
-        method: "POST",
-        body: formData
-        })
-        .then(response => response.json())
-        .then(data => {
-        alert("We have saved your order! We will contact you soon.");
-        })
-        .catch(error => alert("Failed to place order! Try Later"));
-    });
-
-
-        function updateCartCount() {
-            const cart = JSON.parse(localStorage.getItem("cart")) || [];
-            document.getElementById("cart-count").innerText = cart.reduce((sum, item) => sum + item.quantity, 0);
-        }
-
-        document.addEventListener("DOMContentLoaded", () => {
-            updateCart();
-            updateCartCount();
-        });
-    </script>
 
     <div class="fixed-bottom d-flex justify-content-end me-3 mb-3">
         <button class="btn btn-primary rounded-circle p-3" data-bs-toggle="modal" data-bs-target="#contactModal">
