--- a/cart.html
+++ b/cart.html
@@ -42,16 +42,10 @@
                         <a class = "nav-link text-uppercase text-dark" href = "/#collection">collection</a>
                     </li>
                     <li class = "nav-item px-2 py-2">
-                        <a class = "nav-link text-uppercase text-dark" href = "/#special">specials</a>
-                    </li>
-                    <li class = "nav-item px-2 py-2">
                         <a class = "nav-link text-uppercase text-dark" href = "/#blogs">blogs</a>
                     </li>
                     <li class = "nav-item px-2 py-2">
                         <a class = "nav-link text-uppercase text-dark" href = "/about.html">about us</a>
-                    </li>
-                    <li class = "nav-item px-2 py-2 border-0">
-                        <a class = "nav-link text-uppercase text-dark" href = "/#popular">popular</a>
                     </li>
                 </ul>
             </div>
@@ -281,30 +275,29 @@
         <div class = "container position-relative" style="z-index: 1;">
             <div class = "row text-white g-4">
                 <div class = "col-md-6 col-lg-3">
-                    <a class = "text-uppercase text-decoration-none brand text-white" href = "index.html">Attire</a>
-                    <p class = "text-white mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum mollitia quisquam veniam odit cupiditate, ullam aut voluptas velit dolor ipsam?</p>
+                    <img src="images/logo.png" alt="" class="img-fluid my-5">
                 </div>
 
                 <div class = "col-md-6 col-lg-3">
                     <h5 class = "fw-light">Links</h5>
                     <ul class = "list-unstyled">
                         <li class = "my-3">
-                            <a href = "#" class = "text-white text-decoration-none">
+                            <a href = "/#header" class = "text-white text-decoration-none">
                                 <i class = "fas fa-chevron-right me-1"></i> Home
                             </a>
                         </li>
                         <li class = "my-3">
-                            <a href = "#" class = "text-white text-decoration-none">
+                            <a href = "/#collection" class = "text-white text-decoration-none">
                                 <i class = "fas fa-chevron-right me-1"></i> Collection
                             </a>
                         </li>
                         <li class = "my-3">
-                            <a href = "#" class = "text-white text-decoration-none">
-                                <i class = "fas fa-chevron-right me-1"></i> Blogs
+                            <a href = "/#blogs" class = "text-white text-decoration-none">
+                                <i class = "fas fa-chevron-right me-1"></i> News
                             </a>
                         </li>
                         <li class = "my-3">
-                            <a href = "#" class = "text-white text-decoration-none">
+                            <a href = "/about.html" class = "text-white text-decoration-none">
                                 <i class = "fas fa-chevron-right me-1"></i> About Us
                             </a>
                         </li>
