--- a/index.html
+++ b/index.html
@@ -42,16 +42,10 @@
                         <a class = "nav-link text-uppercase text-dark" href = "#collection">collection</a>
                     </li>
                     <li class = "nav-item px-2 py-2">
-                        <a class = "nav-link text-uppercase text-dark" href = "#special">specials</a>
-                    </li>
-                    <li class = "nav-item px-2 py-2">
                         <a class = "nav-link text-uppercase text-dark" href = "#blogs">blogs</a>
                     </li>
                     <li class = "nav-item px-2 py-2">
                         <a class = "nav-link text-uppercase text-dark" href = "/about.html">about us</a>
-                    </li>
-                    <li class = "nav-item px-2 py-2 border-0">
-                        <a class = "nav-link text-uppercase text-dark" href = "#popular">popular</a>
                     </li>
                 </ul>
             </div>
@@ -165,7 +159,7 @@
     <section id = "blogs" class = "py-5">
         <div class = "container">
             <div class = "title text-center py-5">
-                <h2 class = "position-relative d-inline-block">Our Latest Blog</h2>
+                <h2 class = "position-relative d-inline-block">Our Latest News</h2>
             </div>
 
             <div class = "row g-3">
@@ -174,11 +168,6 @@
                     <div class = "card-body px-0">
                         <h4 class = "card-title">Lorem ipsum, dolor sit amet consectetur adipisicing</h4>
                         <p class = "card-text mt-3 text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet aspernatur repudiandae nostrum dolorem molestias odio. Sit fugit adipisci omnis quia itaque ratione iusto sapiente reiciendis, numquam officiis aliquid ipsam fuga.</p>
-                        <p class = "card-text">
-                            <small class = "text-muted">
-                                <span class = "fw-bold">Author: </span>John Doe
-                            </small>
-                        </p>
                         <a href = "#" class = "btn">Read More</a>
                     </div>
                 </div>
@@ -188,11 +177,6 @@
                     <div class = "card-body px-0">
                         <h4 class = "card-title">Lorem ipsum, dolor sit amet consectetur adipisicing</h4>
                         <p class = "card-text mt-3 text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet aspernatur repudiandae nostrum dolorem molestias odio. Sit fugit adipisci omnis quia itaque ratione iusto sapiente reiciendis, numquam officiis aliquid ipsam fuga.</p>
-                        <p class = "card-text">
-                            <small class = "text-muted">
-                                <span class = "fw-bold">Author: </span>John Doe
-                            </small>
-                        </p>
                         <a href = "#" class = "btn">Read More</a>
                     </div>
                 </div>
@@ -202,11 +186,6 @@
                     <div class = "card-body px-0">
                         <h4 class = "card-title">Lorem ipsum, dolor sit amet consectetur adipisicing</h4>
                         <p class = "card-text mt-3 text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet aspernatur repudiandae nostrum dolorem molestias odio. Sit fugit adipisci omnis quia itaque ratione iusto sapiente reiciendis, numquam officiis aliquid ipsam fuga.</p>
-                        <p class = "card-text">
-                            <small class = "text-muted">
-                                <span class = "fw-bold">Author: </span>John Doe
-                            </small>
-                        </p>
                         <a href = "#" class = "btn">Read More</a>
                     </div>
                 </div>
@@ -399,30 +378,29 @@
         <div class = "container position-relative" style="z-index: 1;">
             <div class = "row text-white g-4">
                 <div class = "col-md-6 col-lg-3">
-                    <a class = "text-uppercase text-decoration-none brand text-white" href = "index.html">Attire</a>
-                    <p class = "text-white mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum mollitia quisquam veniam odit cupiditate, ullam aut voluptas velit dolor ipsam?</p>
+                    <img src="images/logo.png" alt="" class="img-fluid my-5">
                 </div>
 
                 <div class = "col-md-6 col-lg-3">
                     <h5 class = "fw-light">Links</h5>
                     <ul class = "list-unstyled">
                         <li class = "my-3">
-                            <a href = "#" class = "text-white text-decoration-none">
+                            <a href = "#header" class = "text-white text-decoration-none">
                                 <i class = "fas fa-chevron-right me-1"></i> Home
                             </a>
                         </li>
                         <li class = "my-3">
-                            <a href = "#" class = "text-white text-decoration-none">
+                            <a href = "#collection" class = "text-white text-decoration-none">
                                 <i class = "fas fa-chevron-right me-1"></i> Collection
                             </a>
                         </li>
                         <li class = "my-3">
-                            <a href = "#" class = "text-white text-decoration-none">
-                                <i class = "fas fa-chevron-right me-1"></i> Blogs
+                            <a href = "#blogs" class = "text-white text-decoration-none">
+                                <i class = "fas fa-chevron-right me-1"></i> News
                             </a>
                         </li>
                         <li class = "my-3">
-                            <a href = "#" class = "text-white text-decoration-none">
+                            <a href = "/about.html" class = "text-white text-decoration-none">
                                 <i class = "fas fa-chevron-right me-1"></i> About Us
                             </a>
                         </li>
