--- a/index.html
+++ b/index.html
@@ -164,29 +164,26 @@
 
             <div class = "row g-3">
                 <div class = "card border-0 col-md-6 col-lg-4 bg-transparent my-3">
-                    <img src = "images/blog_1.jpg" alt = "">
+                    <img src = "images2/fruit.jpeg" alt = "">
                     <div class = "card-body px-0">
-                        <h4 class = "card-title">Lorem ipsum, dolor sit amet consectetur adipisicing</h4>
-                        <p class = "card-text mt-3 text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet aspernatur repudiandae nostrum dolorem molestias odio. Sit fugit adipisci omnis quia itaque ratione iusto sapiente reiciendis, numquam officiis aliquid ipsam fuga.</p>
-                        <a href = "#" class = "btn">Read More</a>
+                        <h4 class = "card-title">Fruits</h4>
+                        <p class = "card-text mt-3 text-muted">We deal in all kinds of Fruits that you might need for Puja. For all your Puja needs, look no where else.</p>
                     </div>
                 </div>
 
                 <div class = "card border-0 col-md-6 col-lg-4 bg-transparent my-3">
-                    <img src = "images/blog_2.jpg" alt = "">
+                    <img src = "images2/flower.jpeg" alt = "">
                     <div class = "card-body px-0">
-                        <h4 class = "card-title">Lorem ipsum, dolor sit amet consectetur adipisicing</h4>
-                        <p class = "card-text mt-3 text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet aspernatur repudiandae nostrum dolorem molestias odio. Sit fugit adipisci omnis quia itaque ratione iusto sapiente reiciendis, numquam officiis aliquid ipsam fuga.</p>
-                        <a href = "#" class = "btn">Read More</a>
+                        <h4 class = "card-title">Flowers</h4>
+                        <p class = "card-text mt-3 text-muted">Flowers and leaves are an important material required for Puja. We deal in all kinds of flowers, leaves and herbs that you might need.</p>
                     </div>
                 </div>
 
                 <div class = "card border-0 col-md-6 col-lg-4 bg-transparent my-3">
-                    <img src = "images/blog_3.jpg" alt = "">
+                    <img src = "images2/clothes.jpeg" alt = "">
                     <div class = "card-body px-0">
-                        <h4 class = "card-title">Lorem ipsum, dolor sit amet consectetur adipisicing</h4>
-                        <p class = "card-text mt-3 text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet aspernatur repudiandae nostrum dolorem molestias odio. Sit fugit adipisci omnis quia itaque ratione iusto sapiente reiciendis, numquam officiis aliquid ipsam fuga.</p>
-                        <a href = "#" class = "btn">Read More</a>
+                        <h4 class = "card-title">Clothes</h4>
+                        <p class = "card-text mt-3 text-muted">All kinds of clothing, jewels and decorative items required in a Puja are available with us.</p>
                     </div>
                 </div>
             </div>
